[project]
name = "sprawozdanie"
version = "1.0.0"
description = "moje srodowisko"
authors = [
    {name = "Kamil Karaś"}
]
license = {text = "Opensource"}
requires-python = ">=3.14"
dependencies = [
    "sphinx (>=9.1.0,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
